# uv-public-pypackage

./: README.md  pyproject.toml
