[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_public_pypackage"]

[tool.hatch.build.targets.sdist]
only-include = ["src/uv_public_pypackage"]

[project]
name = "uv-public-pypackage"
version = "0.1.0"
dependencies = []
requires-python = ">=3.8"
description = "A public test package for installation from Git"

[project.optional-dependencies]
